// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should track Comment notification event 1`] = `
Object {
  "action": "navigation",
  "attrs": Object {},
  "component": "spot im : notification",
}
`;

exports[`should track Comment post (complete) event  1`] = `
Object {
  "action": "navigation",
  "attrs": Object {},
  "component": "spot im : comment : complete",
}
`;

exports[`should track Comment reply click event 1`] = `
Object {
  "action": "navigation",
  "attrs": Object {},
  "component": "spot im : reply",
}
`;

exports[`should track Comment settings button click event 1`] = `
Object {
  "action": "navigation",
  "attrs": Object {},
  "component": "spot im : settings button clicked",
}
`;

exports[`should track Comment shared by email event 1`] = `
Object {
  "action": "navigation",
  "attrs": Object {},
  "component": "spot im : comment : share : email",
}
`;

exports[`should track Comment shared by facebook event 1`] = `
Object {
  "action": "navigation",
  "attrs": Object {},
  "component": "spot im : comment : share : facebook",
}
`;

exports[`should track Comment shared by link event 1`] = `
Object {
  "action": "navigation",
  "attrs": Object {},
  "component": "spot im : comment : share : copy link",
}
`;

exports[`should track Comment shared by twitter event 1`] = `
Object {
  "action": "navigation",
  "attrs": Object {},
  "component": "spot im : comment : share : twitter",
}
`;

exports[`should track Comment start event  1`] = `
Object {
  "action": "navigation",
  "attrs": Object {},
  "component": "spot im : comment : start",
}
`;

exports[`should track Comment when it is recommended 1`] = `
Object {
  "action": "navigation",
  "attrs": Object {},
  "component": "spot im : vote up",
}
`;

exports[`should track Comments filtered by most recommended 1`] = `
Object {
  "action": "navigation",
  "attrs": Object {},
  "component": "spot im : sort : best",
}
`;

exports[`should track Comments filtered by newest event 1`] = `
Object {
  "action": "navigation",
  "attrs": Object {},
  "component": "spot im : sort : newest",
}
`;

exports[`should track Comments filtered by oldest 1`] = `
Object {
  "action": "navigation",
  "attrs": Object {},
  "component": "spot im : sort : oldest",
}
`;

exports[`should track when user clicks on a comment notification 1`] = `
Object {
  "action": "navigation",
  "attrs": Object {},
  "component": "spot im : notification clicked",
}
`;

exports[`should track when user clicks on their username 1`] = `
Object {
  "action": "navigation",
  "attrs": Object {},
  "component": "spot im : username clicked",
}
`;
